--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-multi-carousel": "^2.6.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
-    "styled-components": "^5.3.3",
+    "styled-components": "^5.2.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
